--- a/html/static/style.css
+++ b/html/static/style.css
@@ -1,13 +1,103 @@
-* {
+html {
+    --text-low-contrast: rgba(0,0,0,0.5);
+    --text-high-contrast: rgb(77, 91, 124);
+    --green: #2ebd59;
+    --warm: ##ffd1b6;
+    --cool: #b6dfff;
+    --font-weight-normal: 500;
+    --font-weight-bold: 700;
+
+    --card-padding-x: 35px;
+    --card-padding-y: 30px;
+    --card-width: calc(375px - var(--card-padding-x) * 2);
+
+
     box-sizing: border-box;
+    font-size: 16px;
+    line-height: 28px;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
 }
 
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
+body, h1, h2, h3, h4, h5, h6, p, ol, ul {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    font-weight: var(--font-weight-normal);
+    color: var(--text-high-contrast);
+    background-color: var(--cool);
+    font-family: 'Poppins', sans-serif;
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+h1 {
+    font-size: 12px;
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+    letter-spacing: 0.8px;
+}
+
+
+h1 a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.led {
+    display: block;
+    width: 15px;
+    height: 15px;
+    margin: 15px auto 20px;
+    border-radius: 50%;
+    background-color: var(--green);
+}
+
+dl {
+    margin: 0;
+    text-transform: uppercase;
+    margin-bottom: 0.35em;
+    text-align: center;
+}
+
+dt {
+    color: var(--text-low-contrast);
+    letter-spacing: 0.4px;
+    margin: 0 auto 5px auto;
+}
 
 dd {
-    font-weight: 600;
-    font-size: 40px;
+    font-size: 30px;
+    margin: 0 auto 15px auto;
 }
 
-dd.-smaller {
+dd span {
+    font-size: 40px;
+    font-family: 'Ubuntu Mono', monospace;
+    font-weight: var(--font-weight-bold);
+}
+
+.-smaller {
+    line-height: 1;
     font-size: 24px;
+}
+
+.card {
+    border-radius: 24px;
+    background-color: #fff;
+    padding: var(--card-padding-y) var(--card-padding-x);
+    width: var(--card-width);
+    margin: 0 auto;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
