Add flex-center style to temperature and humidity elements.

--- a/internal/html/static/style.css
+++ b/internal/html/static/style.css
@@ -41,6 +41,12 @@ body {
     justify-content: center;
 }
 
+.flex-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 h1 {
     font-size: 12px;
     display: block;
